[F] Remove sun.misc package usage